Update global CSS styles with new color classes
Added new utility classes for text colors including .white, .black, .placeholder, .text, .label, and .error-text. Removed commented-out variables for cleaner code. This enhances the styling options available for components throughout the application.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -32,11 +32,26 @@ a {
   text-decoration: none;
 }
 
-/* --black: var(--black-500);
-  --placeholder: var(--text-placeholder);
-  --text: var(--text-primary);
-  --label: var(--text-secondary);
-  --border: var(--border-medium); */
+.white {
+  color: var(--neutral-50);
+}
+.black {
+  color: var(--black);
+}
+.placeholder {
+  color: var(--dark-gray-100);
+}
+.text {
+  color: var(--text-primary);
+}
+.label {
+  color: var(--black-50);
+}
+.error-text {
+  color: var(--error);
+  font-size: var(--fs12);
+  font-weight: 400;
+}
 
 @media screen and (min-width: 1400px) {
   .container {
