Refactor authentication middleware and update UI components
- Updated middleware to redirect authenticated users from specific routes to the dashboard.
- Refactored Forgot Password, Reset Password, and Verify OTP pages to use dedicated template components for better code organization.
- Enhanced global CSS styles by adding new color variables and improving existing ones.
- Updated button and input components for better styling and functionality, including loading states and error handling.
- Removed unused styles and optimized existing CSS for improved performance and maintainability.

--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -10,8 +10,23 @@
   --fs24: 24px; /* 2XL */
   --fs30: 30px; /* 3XL */
   --fs32: 32px; /* 4XL */
-}
 
+  /* sizes */
+
+  --s-20: 20px;
+
+  /* height */
+  --h-48: 48px;
+  --h-40: 40px;
+
+  /* border radius */
+  --br-8: 8px;
+  --br-6: 6px;
+
+  /* padding */
+  --p-12: 12px;
+  --p-16: 16px;
+}
 
 p,
 span {
@@ -39,9 +54,6 @@ span {
   font-weight: 700;
 }
 
-
-
-
 /* Extra large devices (1200px and up) */
 @media (min-width: 1200px) {
   :root {
@@ -57,7 +69,6 @@ span {
     --fs32: 32px;
   }
 }
-
 
 /* Large devices (1024px and up) */
 @media (min-width: 1024px) {
@@ -91,7 +102,6 @@ span {
   }
 }
 
-
 /* Small devices (480px and up) */
 @media (min-width: 480px) {
   :root {
@@ -123,4 +133,3 @@ span {
     --fs32: 30px;
   }
 }
-
