--- a/src/app/styles/color.css
+++ b/src/app/styles/color.css
@@ -11,6 +11,7 @@
 
   /* ===== SECONDARY COLORS ===== */
   --secondary: #ffbf00;
+  --secondary-light: #e6ab00;
   --secondary-dark: #996314;
   --secondary-bg: #fdf8e3;
 
@@ -22,7 +23,7 @@
 
   /* ===== BLUE SHADES ===== */
   --blue: #1c75bc;
-  --blue-light: #0b373c;
+  --blue-dark: #0b373c;
   --blue-bg: rgba(0, 17, 102, 0.1);
   --blue-bg-dark: rgba(0, 9, 51, 0.65);
   --blue-bg-darker: rgba(0, 6, 38, 0.9);
@@ -32,7 +33,7 @@
   --green-bg: rgba(6, 122, 88, 0.2);
   --green-bg-light: rgba(10, 204, 146, 0.05);
 
-  /* ===== GRAY SHADES ===== */
+  /* ===== GRAY SCALE ===== */
   --gray-50: #f8fafb;
   --gray-100: #f5f6f6;
   --gray-200: #e8ebee;
@@ -65,18 +66,6 @@
   --black-400: #344054;
   --black-500: #000000;
 
-  /* ===== NEUTRAL GRAY SCALE ===== */
-  --neutral-50: #ffffff;
-  --neutral-100: #f8fafb;
-  --neutral-200: #e8ebee;
-  --neutral-300: #dfe1e7;
-  --neutral-400: #b8b8b8;
-  --neutral-500: #9a9a9a;
-  --neutral-600: #858585;
-  --neutral-700: #7e7e7e;
-  --neutral-800: #606060;
-  --neutral-900: #4d4d4d;
-
   /* ===== TEXT COLORS ===== */
   --text-primary: #111827;
   --text-secondary: #6b7280;
@@ -86,7 +75,7 @@
   --text-disabled: #9a9a9a;
 
   /* ===== BACKGROUND COLORS ===== */
-  --bg-primary: #ffffff;
+
   --bg-secondary: #f8fafb;
   --bg-tertiary: #f5f6f6;
   --bg-quaternary: #e8ebee;
@@ -102,11 +91,12 @@
   /* ===== STATUS COLORS ===== */
   --warning: #ffbf00;
   --info: #1c75bc;
-  --success: #006644;
   --error: #db1717;
 
   /* ===== HOVER STATES ===== */
   --hover-primary: #0a5afe;
   --hover-secondary: #996314;
   --hover-gray: #f5f6f6;
+
+  --white: #ffffff;
 }
