--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -2,7 +2,7 @@
 @import "./color.css";
 
 :root {
-  --background: #ffffff;
+  --background: var(--white);
   --foreground: var(--black);
 }
 
@@ -33,23 +33,24 @@ a {
 }
 
 .white {
-  color: var(--neutral-50);
+  color: var(--white);
 }
 .black {
-  color: var(--black);
+  color: var(--black-500);
 }
 .placeholder {
-  color: var(--dark-gray-100);
+  color: var(--gray-500);
 }
 .text {
   color: var(--text-primary);
 }
 .label {
-  color: var(--black-50);
+  color: var(--text-secondary);
 }
-.error-text {
-  color: var(--error);
-  font-size: var(--fs12);
+
+.errorText {
+  color: var(--warning);
+  font-size: var(--fs14);
   font-weight: 400;
 }
 
