Refactor layout and styles; remove unused components
- Added SideBarSkeleton to the RootLayout for improved structure.
- Updated typography styles to include additional heading elements and enforce margin rules.
- Deleted unused HomeTemplate and Header components along with their associated styles for cleaner codebase.

--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -29,9 +29,16 @@
 }
 
 p,
-span {
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-size: var(--fs14);
   font-weight: 400;
+  margin-bottom: 0px !important;
 }
 
 .pointer {
