--- a/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
+++ b/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
@@ -7,22 +7,27 @@
   overflow-y: auto; /* allows vertical scrolling */
   max-height: 500px;
 }
+.tableWrapper::-webkit-scrollbar {
+  display: none;
+}
+
 
 .responsiveTable {
   width: 100%;
-  border-collapse: separate;
+  border-collapse: collapse;
   border-spacing: 0 5px;
   min-width: 600px; /* ensure min scrollable width */
 }
 
 .tableHeader th {
-  background: var(--Poor-white);
-  border-bottom: 1px solid var(--border-color);
-  color: var(--Dark-gray);
-  font-size: 14px;
+  background: var(--white);
+  border-bottom: 1px solid var(--blue-bg);
+  color: var( --blue-bg-dark);
+  font-size: var(--fs12);
+  font-family: var(--font-rethink);
   font-weight: 600;
   padding: 32px 12px 16px 12px;
-  min-width: 180px; /* ensures responsiveness */
+  min-width: 180px; 
   text-align: left;
   position: sticky;
   top: 0;
@@ -33,19 +38,21 @@
   color: var(--Black);
   font-size: 15px;
   font-weight: 400;
-  padding: 14px 16px;
+  padding: 18px 16px;
   min-width: 180px; /* keep scroll working */
   white-space: nowrap; /* prevents breaking */
   overflow: hidden;
   text-overflow: ellipsis;
+  border-bottom:  1px solid var(--blue-bg);
 }
 
 .tableBody tr:nth-child(even) td {
-  background: #f4f7fd;
+  background: var(--success-bg);
+ 
 }
 
 .tableBody tr:hover td {
-  background: #eef3fb;
+  background: var(--success-bg);
 }
 
 .imageContainer {
