Enhance styles and components for improved UI
- Added new color variables for pending and ongoing statuses in color.css.
- Introduced max line clamping classes in globals.css for better text overflow handling.
- Updated typography.css with additional padding and gap variables.
- Refactored LandlordInsightTemplate to include a HeadingSection and improved layout.
- Modified ResponsiveTable styles for better responsiveness and hover effects.
- Updated CommonCells to reflect new status colors and added new icons for status representation.
- Changed default currency symbol in helper.js from $ to £ and adjusted price formatting.

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -48,7 +48,22 @@ a {
   font-size: var(--fs14);
   font-weight: 400;
 }
+.maxLine1 {
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
 
+.maxLine2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
 @media screen and (min-width: 1400px) {
   .container {
     max-width: 1440px !important;
