--- a/src/app/styles/typography.css
+++ b/src/app/styles/typography.css
@@ -33,7 +33,13 @@
   --p-10: 10px;
   --p-12: 12px;
   --p-16: 16px;
+  --p-20: 20px;
   --p-30: 30px;
+
+  /* gap */
+  --g-10: 10px;
+  --g-20: 20px;
+  --g-30: 30px;
 }
 
 p,
