--- a/src/components/Template/LoginTemplate/LoginTemplate.module.css
+++ b/src/components/Template/LoginTemplate/LoginTemplate.module.css
@@ -22,11 +22,7 @@
 
 /* Branding Content */
 .brandingContent {
-  background: linear-gradient(
-    135deg,
-    var(--primary) 0%,
-    var(--primary-light) 100%
-  );
+  background: linear-gradient(135deg, var(--blue-dark) 0%, var(--primary) 100%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -139,7 +135,7 @@
   text-decoration: none;
   position: relative;
   width: max-content;
-  margin: 0 0 10px auto;
+  margin: 0 0 10px auto !important;
 }
 
 .forgotPassword:hover {
