--- a/src/components/atoms/Button/Button.module.css
+++ b/src/components/atoms/Button/Button.module.css
@@ -19,7 +19,7 @@
   font-weight: 500;
   text-align: center;
   cursor: pointer;
-  color: var(--blue-dark);
+  /* color: var(--blue-dark); */
 }
 
 .btn:disabled,
@@ -49,6 +49,7 @@
 .btn[color-variant="outlined"] {
   border: 1px solid var(--primary-dark);
   color: var(--primary-dark);
+  font-weight: 600;
   background-color: transparent;
 }
 
