--- a/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
+++ b/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
@@ -11,7 +11,6 @@
   display: none;
 }
 
-
 .responsiveTable {
   width: 100%;
   border-collapse: collapse;
@@ -22,12 +21,12 @@
 .tableHeader th {
   background: var(--white);
   border-bottom: 1px solid var(--blue-bg);
-  color: var( --blue-bg-dark);
+  color: var(--blue-bg-dark);
   font-size: var(--fs12);
   font-family: var(--font-rethink);
   font-weight: 600;
   padding: 32px 12px 16px 12px;
-  min-width: 180px; 
+  min-width: 180px;
   text-align: left;
   position: sticky;
   top: 0;
@@ -43,16 +42,15 @@
   white-space: nowrap; /* prevents breaking */
   overflow: hidden;
   text-overflow: ellipsis;
-  border-bottom:  1px solid var(--blue-bg);
+  border-bottom: 1px solid var(--blue-bg);
 }
 
 .tableBody tr:nth-child(even) td {
   background: var(--success-bg);
- 
 }
 
-.tableBody tr:hover td {
-  background: #e6f4eb6e;
+.tableBody .bodyRow:hover td {
+  background: #e6f4eb34;
 }
 
 .imageContainer {
