--- a/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
+++ b/src/components/organisms/ResponsiveTable/ResponsiveTable.module.css
@@ -1,48 +1,35 @@
 .tableWrapper {
+  background-color: var(--white);
   width: 100%;
-  overflow-x: auto; /* scrolls if content wider */
-  border-radius: 10px;
-  background-color: var(--Poor-white);
-  overflow-y: auto; /* allows vertical scrolling */
-  /* max-height: 500px; */
   height: 100%;
 }
-.tableWrapper::-webkit-scrollbar {
-  display: none;
-}
-
 .responsiveTable {
   width: 100%;
-  border-collapse: collapse;
-  border-spacing: 0 5px;
-  min-width: 600px; /* ensure min scrollable width */
 }
-
 .tableHeader th {
   background: var(--white);
   border-bottom: 1px solid var(--blue-bg);
   color: var(--blue-bg-dark);
   font-size: var(--fs12);
-  font-family: var(--font-rethink);
-  font-weight: 600;
-  padding: 32px 12px 16px 12px;
-  min-width: 180px;
-  text-align: left;
   position: sticky;
   top: 0;
-  z-index: 2;
+  font-weight: 600;
+  padding: 15px 24px;
+}
+
+.tableBody tr {
+  border-bottom: 1px solid var(--blue-bg);
+}
+
+.tableBody tr:last-child {
+  border-bottom: none;
 }
 
 .tableBody td {
-  color: var(--Black);
+  color: var(--blue-bg-darker);
   font-size: 15px;
   font-weight: 400;
   padding: 18px 16px;
-  min-width: 180px; /* keep scroll working */
-  white-space: nowrap; /* prevents breaking */
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border-bottom: 1px solid var(--blue-bg);
 }
 
 .tableBody tr:nth-child(even) td {
@@ -53,22 +40,12 @@
   background: #e6f4eb34;
 }
 
-.imageContainer {
-  position: relative;
-  height: 44px !important;
-  max-width: 44px;
-  min-width: 44px;
-  border-radius: 50%;
-  background-color: var(--border-color);
-}
-
-.imageContainer img {
-  object-fit: cover;
-  border-radius: 50%;
-}
-
-.actionContainer {
-  display: flex;
-  gap: 10px;
-  align-items: center;
+@media screen and (max-width: 1200px) {
+  .tableWrapper {
+    overflow-x: auto;
+  }
+  .responsiveTable {
+    border-collapse: collapse;
+    min-width: 900px;
+  }
 }
