--- a/src/components/atoms/Filter/Filter.module.css
+++ b/src/components/atoms/Filter/Filter.module.css
@@ -21,12 +21,14 @@
   
   .trigger:hover {
     border-color:var(--success-bg);
-    box-shadow: 0px 2px 4px 0px rgba(10, 13, 18, 0.1);
+    /* box-shadow: 0px 2px 4px 0px rgba(10, 13, 18, 0.1); */
+    transform: translateY(-2px);
   }
   
   .trigger.active {
     border-color: var(--success-bg);
     background-color: var(--success-bg);
+    border-radius: var(--br-6);
   }
   
   .trigger:focus-visible {
