--- a/src/components/molecules/SubscriptionCard/SubscriptionCard.module.css
+++ b/src/components/molecules/SubscriptionCard/SubscriptionCard.module.css
@@ -1,32 +1,117 @@
-.fullName {
-  color: var(--dark-gray-900);
-}
-.email {
-  color: var(--gray-600);
-}
-.userDiv {
+
+.cardDiv {
+  background: var(--white);
   display: flex;
   flex-direction: column;
-  gap: 5px;
+  border-radius: var(--br-8) var(--br-8) 0 0;
+  border: 1px solid var(--gray-200);
+  width: 100%;
+  height: 100%;
 }
-.cardDiv {
-  border-bottom: 0.5px solid var(--gray-150);
-}
-.cardDiv {
+
+.header {
+  padding: var(--p-16);
+  border-bottom: 1px solid var(--gray-200);
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: var(--g-24);
+}
+.body {
+  padding: var(--p-16);
+}
+.headerSection {
+  display: flex;
+  align-items: flex-start;
+  gap: var(--g-16);
+  width: 100%;
   align-items: center;
 }
-.amountDiv {
+
+
+.iconContainer {
+  flex-shrink: 0;
+}
+
+.iconBackground {
+  width: 40px;
+  height: 40px;
+  background: #E9FFFC;
+  border-radius: 50%;
   display: flex;
-  justify-content: flex-end;
-  align-items: flex-end;
+  align-items: center;
+  justify-content: center;
+  padding: 5px;
+}
+
+.iconSquare {
+  width: 24px;
+  height: 24px;
+  background: #C9FFF8;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+.iconLayers {
+  width: 12px;
+  height: 12px;
+  background: var(--white);
+  border-radius: 2px;
+  position: relative;
+}
+
+.iconLayers::before {
+  content: "";
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 8px;
+  height: 8px;
+  background: var(--white);
+  border-radius: 1px;
+  opacity: 0.7;
+}
+
+
+.planInfo {
+  display: flex;
   flex-direction: column;
-  gap: 5px;
+  gap: 8px;
+  flex: 1;
 }
-.nextPaymentDate {
-  color: var(--gray-600);
+
+.planName {
+  color: var(--black-400);
+  font-family: var(--font-rethink);
+  line-height: var(--lh-24);
+
 }
-.amount {
-  color: var(--info);
+
+.price {
+  color: var(--dark-gray-700);
+  line-height: var(--lh-30);
+  font-family: var(--font-rethink);
+}
+
+
+.featuresList {
+  padding-left: var(--p-16);
+  display: flex;
+  flex-direction: column;
+  gap: var(--g-12);
+}
+
+.featureItem {
+  color: var(--gray-675);
+  font-weight: 400;
+  line-height: var(--lh-24);
+  position: relative;
+}
+
+.featureItem::marker {
+  color: var(--gray-675);
+  font-size: var(--fs12);
+  margin-right: var(--g-12);
 }
