--- a/src/components/organisms/HeadingSection/HeadingSection.module.css
+++ b/src/components/organisms/HeadingSection/HeadingSection.module.css
@@ -3,15 +3,18 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid var(--border-light);
-    padding-bottom: var(--p-20);
+    /* padding-bottom: var(--p-20); */
 }
 .input{
     border-radius: 100px !important;
+    width:295px !important;
+    padding-left: 45px !important;
 }
 .searchFilter{
     display: flex;
     align-items: center;
     gap: var(--g-10);
+    padding-bottom: var(--p-16);
 }
 .heading{
     font-size: var(--fs18);
